Refactor code after java update